@@ -6,22 +6,52 @@
 * [PRODUCER_CONSUMER](#PRODUCER_CONSUMER)
   * [Semaphores](#Semaphores)
   * [Wait_Notify](#Wait_Notify)
+    * [Why wait(), notify() Theory](https://github.com/learning-zone/java-interview-questions/blob/master/multithreading-questions.md#q-why-wait-notify-and-notifyall-must-be-called-from-inside-of-the-synchronized-block-or-method)
+    * [Example1](#Example1)
+    * [BetterExample_WITH_DEADLOCK](#BetterExample_WITH_DEADLOCK)
   * [Custom_Blocking_Queue](#Custom_Blocking_Queue)
   * [BlockingQueue_JAVA](#BlockingQueue_JAVA)
   * [EVEN_AND_ODD](#EVEN_AND_ODD)
+    * [semaphore](#semaphore)
+    * [Simple_Threads](#Simple_Threads)
+    * [Executor_Service](#Executor_Service)
+    * 
   * [MULTI_PRODUCER_CONSUMER](#MULTI_PRODUCER_CONSUMER)
+---
+* [COUNT_DOWNLATCH](#COUNT_DOWNLATCH)
   * 
 ---
+* [CYCLIC_BARRIER](#CYCLIC_BARRIER)
+---
+---
 * [EXECUTOR_SERVICE](#EXECUTOR_SERVICE)
+  *[Thread_Pool](https://github.com/learning-zone/java-interview-questions/blob/master/multithreading-questions.md#q-what-is-thread-pool-how-can-we-create-thread-pool-in-java) 
   * [execute()](#execute())
+    
   * [submit()](#submit())
   * [PRODUCER_CONSUMER](#PRODUCER_CONSUMER)
   * 
----  
-
-* [GARBAGE_COLLECTION](#GARBAGE_COLLECTION)
+---
+* **QUESTION BANK**
+  * [daemon Thread?](https://github.com/learning-zone/java-interview-questions/blob/master/multithreading-questions.md#q-what-is-difference-between-user-thread-and-daemon-thread)
+  * [Thread Priority](https://github.com/learning-zone/java-interview-questions/blob/master/multithreading-questions.md#q-what-do-you-understand-about-thread-priority)
+  * [What is Deadlock](https://github.com/learning-zone/java-interview-questions/blob/master/multithreading-questions.md#q-what-is-deadlock-how-to-analyze-and-avoid-deadlock-situation)
+  * [How safety of a thread achieved?](https://github.com/learning-zone/java-interview-questions/blob/master/multithreading-questions.md#q-how-is-the-safety-of-a-thread-achieved)
+  * [Create Immutable Class](https://dzone.com/articles/how-to-create-an-immutable-class-in-java)
+  * [Thread Dump](https://github.com/learning-zone/java-interview-questions/blob/master/multithreading-questions.md#q-what-is-java-thread-dump-how-can-we-get-java-thread-dump-of-a-program)
+  * [JVM_Heap_memory](#JVM_Heap_memory)
+  * 
+---
+* **JVM** 
+* [JVM_QUESTIONS](https://www.javamadesoeasy.com/2017/03/top-30-jvmjava-virtual-machine.html)
+* [JVM_HEAP_STRUCTURE](https://www.javamadesoeasy.com/2016/10/jvm-heap-memory-hotspot-heap-structure.html)
+* [FIX_OUTOFMEMORY_HEAPSCAPE](https://www.javamadesoeasy.com/2017/02/exception-in-thread-javalangoutofmemory.html)
+* [FIXING MEMORY LEAKS](https://www.javamadesoeasy.com/2016/12/detecting-and-fixing-memory-leak-in-java.html)
+* [ANALYZE_GARBAGE_COLLECTOR](https://www.javamadesoeasy.com/2016/12/how-to-monitor-and-analyze-garbage.html)
+* [GENERATE HEAPDUMP](https://www.javamadesoeasy.com/2016/11/how-to-use-jhat-to-analyze-heat-dump.html)
+---
+* [PERFORMANCE_NOTES](#PERFORMANCE_NOTES)
 <!--te-->
-
 
 ---
 ## PRODUCER_CONSUMER
@@ -295,7 +325,7 @@ public class ProducerConsumerBlockingQueueCustom {
 
 ---
 ### Wait_Notify
-#### TC:  , MC:
+#### Example1
 - Some comment
 - [Back to Top](#Table-of-contents)
 ```java
@@ -417,6 +447,139 @@ public class ProducerConsumerWaitNotify {
 ---
 
 ---
+#### BetterExample_WITH_DEADLOCK
+```java
+// Message Class 
+class Message {
+    String message;
+    boolean empty = true;
+
+    //Method used by reader
+    public synchronized String read() {
+      while (empty) {
+        try {
+                /*
+                 Reader thread waits until Writer invokes the notify()
+                 method or the notifyAll() method for 'message' object.
+                 Reader thread releases ownership of lock and waits
+                 until Writer thread notifies Reader thread waiting on
+                 this object's lock to wake up either through a call to
+                 the notify method or the notifyAll method.
+                 */
+          wait();
+        } catch (InterruptedException e) {
+          System.out.println(Thread.currentThread().getName() + "Interrupted.");
+        }
+      }
+        empty = true;//Reader reads the message and marks empty as true.
+      /*
+         Wakes up all threads that are waiting on 'message' object's monitor(lock).
+         This thread(Reader) releases the lock for 'message' object.
+         */
+      notifyAll();
+      return message;//Reader reads the message.
+    }
+
+    //Method used by writer
+    public synchronized void write(String message) {
+      while (!empty) {
+        try {
+                /*
+                 Writer thread waits until Reader invokes the notify()
+                 method or the notifyAll() method for 'message' object.
+                 Writer thread releases ownership of lock and waits
+                 until Reader thread notifies Writer thread waiting on
+                 this object's lock to wake up either through a call to
+                 the notify method or the notifyAll method.
+                 */
+          wait();
+        } catch (InterruptedException e) {
+          System.out.println(Thread.currentThread().getName() + "Interrupted.");
+        }
+      }
+        this.message = message;//Writer writes the message.
+        empty = false;//Now make empty as false.
+       /*
+         Wakes up all threads that are waiting on 'message' object's monitor(lock).
+         This thread(Writer) releases the lock for 'message' object.
+         */
+         notifyAll();
+    }
+}
+// Writer Class
+class Writer implements Runnable {
+  private Message message;
+
+  public Writer(Message message) {
+    this.message = message;
+  }
+
+  @Override
+  public void run() {
+    String messages[] = {
+            "Humpty Dumpty sat on a wall",
+            "Humpty Dumpty had a great fall",
+            "All the king's horses and all the king's men",
+            "Couldn't put Humpty together again"
+    };
+
+    Random random = new Random();
+
+    for (int i = 0; i < messages.length; i++) {
+      message.write(messages[i]);
+      try {
+        Thread.sleep(random.nextInt(2000));
+      } catch (InterruptedException e) {
+        System.out.println("Writer Thread Interrupted!!!");
+      }
+    }
+    message.write("Finished!");
+  }
+}
+// Reader.class 
+class Reader implements Runnable {
+
+  private Message message;
+
+  public Reader(Message message) {
+    this.message = message;
+  }
+
+  @Override
+  public void run() {
+    Random random = new Random();
+    for (String latestMessage = message.read(); !"Finished!".equals(latestMessage); latestMessage = message.read()) {
+      System.out.println(latestMessage);
+      try {
+        Thread.sleep(random.nextInt(2000));
+      } catch (InterruptedException e) {
+        System.out.println("Reader Thread Interrupted!!!");
+      }
+    }
+  }
+}
+
+public class Main {
+  public static void main(String[] args) {
+    //Shared message object between Reader and Writer threads.
+    Message message = new Message();
+
+    Thread writerThread = new Thread(new Writer(message));
+    Thread readerThread = new Thread(new Reader(message));
+
+    writerThread.start();
+    readerThread.start();
+  }
+}
+
+
+
+```
+
+
+
+---
+----
 ### BlockingQueue_JAVA
 #### TC:  , MC:
 - Some comment
@@ -498,3 +661,551 @@ public class ProducerConsumerBlockingQueue {
 }
 ```
 ---
+
+### EVEN_AND_ODD
+#### semaphore
+
+- Using Semaphore
+- [Back to Top](#Table-of-contents)
+```java
+import java.util.concurrent.*;
+
+public class Test {
+    public static void main(String[] args) {
+        PrintNumberSeries zeo = new PrintNumberSeries(100);
+        Thread t1 = new PrintNumberSeriesThread(zeo,"even");
+        Thread t2 = new PrintNumberSeriesThread(zeo,"odd");
+        t1.start();
+        t2.start();
+
+    }
+}
+
+class PrintNumberSeries {
+    private int n;
+    private Semaphore  oddSem, evenSem;
+
+    public PrintNumberSeries(int n) {
+        this.n = n;
+        oddSem = new Semaphore(1);
+        evenSem = new Semaphore(0);
+    }
+
+    public void PrintEven() {
+        for (int i = 2; i <= n; i += 2) {
+            try {
+                evenSem.acquire();
+            }
+            catch (Exception e) {
+            }
+            System.out.print(i);
+            oddSem.release();
+        }
+    }
+    public void PrintOdd() {
+        for (int i = 1; i <= n; i += 2) {
+            try {
+                oddSem.acquire();
+            }
+            catch (Exception e) {
+            }
+            System.out.print(i);
+            evenSem.release();
+        }
+    }
+}
+class PrintNumberSeriesThread extends Thread {
+    PrintNumberSeries zeo;
+    String method;
+    public PrintNumberSeriesThread(PrintNumberSeries zeo, String method){
+        this.zeo = zeo;
+        this.method = method;
+    }
+    public void run() {
+        if ("even".equals(method)) {
+            try {
+                zeo.PrintEven();
+            }
+            catch (Exception e) {
+            }
+        }
+        else if ("odd".equals(method)) {
+            try {
+                zeo.PrintOdd();
+            }
+            catch (Exception e) {
+            }
+        }
+    }
+}
+
+
+```
+---
+#### Simple_Threads
+- Using Simple Threads
+- [Back to Top](#Table-of-contents)
+```java
+public class OddEvenWithThread {
+  public static void main(String a[]) {
+    Thread t1 = new Thread(new OddEvenRunnable(0), "Even Thread");
+    Thread t2 = new Thread(new OddEvenRunnable(1), "Odd Thread");
+
+    t1.start();
+    t2.start();
+  }
+}
+class OddEvenRunnable implements Runnable {
+  Integer evenflag;
+  static Integer number = 1;
+  static Object lock = new Object();
+
+  OddEvenRunnable(Integer evenFlag) {
+    this.evenflag = evenFlag;
+  }
+
+  @Override
+  public void run() {
+    while (number < 10) {
+      synchronized (lock) {
+        try {
+          while (number % 2 != evenflag) {
+            lock.wait();
+          }
+        } catch (InterruptedException e) {
+          e.printStackTrace();
+        }
+
+        System.out.println(Thread.currentThread().getName() + " " + number);
+        number++;
+        lock.notifyAll();
+      }
+    }
+  }
+}
+
+```
+---
+#### Simple_Threads_version2
+- Using Simple Threads version2
+- [Back to Top](#Table-of-contents)
+```java
+// Java program for the above approach
+public class GFG {
+  // Starting counter
+  int counter = 1;
+  static int N;
+  // Function to print odd numbers
+  public void printOddNumber()
+  {
+    synchronized (this)
+    {
+      // Print number till the N
+      while (counter < N) {
+
+        // If count is even then print
+        while (counter % 2 == 0) {
+
+          // Exception handle
+          try {
+            wait();
+          }
+          catch (
+                  InterruptedException e) {
+            e.printStackTrace();
+          }
+        }
+
+        // Print the number
+        System.out.print(counter + " ");
+
+        // Increment counter
+        counter++;
+
+        // Notify to second thread
+        notify();
+      }
+    }
+  }
+
+  // Function to print even numbers
+  public void printEvenNumber()
+  {
+    synchronized (this)
+    {
+      // Print number till the N
+      while (counter < N) {
+
+        // If count is odd then print
+        while (counter % 2 == 1) {
+
+          // Exception handle
+          try {
+            wait();
+          }
+          catch (
+                  InterruptedException e) {
+            e.printStackTrace();
+          }
+        }
+
+        // Print the number
+        System.out.print(
+                counter + " ");
+
+        // Increment counter
+        counter++;
+
+        // Notify to 2nd thread
+        notify();
+      }
+    }
+  }
+
+  // Driver Code
+  public static void main(String[] args)
+  {
+    // Given Number N
+    N = 10;
+
+    // Create an object of class
+    GFG mt = new GFG();
+
+    // Create thread t1
+    Thread t1 = new Thread(new Runnable() {
+      public void run()
+      {
+        mt.printEvenNumber();
+      }
+    });
+
+    // Create thread t2
+    Thread t2 = new Thread(new Runnable() {
+      public void run()
+      {
+        mt.printOddNumber();
+      }
+    });
+
+    // Start both threads
+    t1.start();
+    t2.start();
+  }
+}
+
+```
+---
+
+#### Executor_Service
+- Using Executor_Service
+- [Back to Top](#Table-of-contents)
+```java
+import java.util.concurrent.Executor;
+import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicInteger;
+
+public class Test {
+
+  public static void main(String[] args){
+    final int max = 100;
+    final AtomicInteger i = new AtomicInteger(0);
+    Executor dd = Executors.newFixedThreadPool(2);
+
+    final Object lock = new Object();
+
+    dd.execute(new Runnable() {
+      @Override
+      public void run() {
+        while (i.get() < max) {
+          if (i.get() % 2 == 0) {
+            System.out.print(" " + i.getAndAdd(1));
+
+            synchronized(lock){
+              lock.notify();
+            }
+          }else{
+            synchronized(lock){
+              try {
+                lock.wait();
+              } catch (InterruptedException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+              }
+            }
+          }
+        }
+      }
+    });
+    dd.execute(new Runnable() {
+      @Override
+      public void run() {
+        while (i.get() < max) {
+          if (i.get() % 2 != 0) {
+            System.out.print(" " + i.getAndAdd(1));
+
+            synchronized(lock){
+              lock.notify();
+            }
+          }else{
+            synchronized(lock){
+              try {
+                lock.wait();
+              } catch (InterruptedException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+              }
+            }
+          }
+        }
+      }
+    });
+    do {
+      try {
+        Thread.currentThread().sleep(1000);
+      } catch (InterruptedException e) {
+        e.printStackTrace();
+      }
+    } while (i.get() != max);
+    System.out.println("\nDone");
+  }
+}
+
+```
+---
+
+
+---
+---
+## COUNTDOWN_LATCH
+```java
+
+import java.util.concurrent.CountDownLatch;
+/** Copyright (c), AnkitMittal JavaMadeSoEasy.com */
+public class CountDownLatchTest {
+  public static void main(String[] args) {
+    CountDownLatch countDownLatch=new CountDownLatch(3);
+    System.out.println("CountDownLatch has been created with count=3");
+
+    new Thread(new MyRunnable(countDownLatch),"Thread-1").start();
+
+    try {
+      countDownLatch.await();
+    } catch (InterruptedException e) {
+      e.printStackTrace();
+    }
+
+    System.out.println("count has reached zero, "+
+            Thread.currentThread().getName()+" thread has ended");
+
+
+  }
+
+}
+ 
+class MyRunnable implements Runnable{
+    CountDownLatch countDownLatch;
+    MyRunnable(CountDownLatch countDownLatch){
+           this.countDownLatch=countDownLatch;
+    }
+    
+    
+    public void run(){
+           
+           for(int i=2;i>=0;i--){
+                  
+                  countDownLatch.countDown();           
+                  System.out.println(Thread.currentThread().getName()+
+                               " has reduced latch count to : "+ i);
+                  
+                  try {
+                        Thread.sleep(1000);
+                  } catch (InterruptedException e) {
+                        e.printStackTrace();
+                  }
+           }
+                  
+    }
+    
+}
+/**OUTPUT
+ 
+CountDownLatch has been created with count=3
+Initially, CountDownLatch is created with count=3
+main thread called countDownLatch.await() and it is waiting for count to become 0.
+Thread-1 called countDownLatch.countDown()  method. [Now, count=2]
+Thread-1 has reduced latch count to : 2
+
+Thread-1 called countDownLatch.countDown()  method. [Now, count=1]
+Thread-1 has reduced latch count to : 1
+
+Thread-1 called countDownLatch.countDown()  method. [Now, count=0]
+Thread-1 has reduced latch count to : 0
+
+count has reached zero, main thread has ended
+As, count has reached zero, main thread has ended.
+ 
+*/
+```
+
+---
+## CYCLIC_BARRIER
+### Example 
+#### TC:  , MC:
+- Some comment
+- [Back to Top](#Table-of-contents)
+```java
+package CyclicBarrier;
+ 
+import java.util.concurrent.BrokenBarrierException;
+import java.util.concurrent.CyclicBarrier;
+public class CyclicBarrierTest {
+    public static void main(String[] args) {
+           /*
+            * Create CountDownLatch with 3 parties, when all 3 parties
+            * will reach common barrier point CyclicBarrrierEvent will be
+            * triggered i.e. run() method of CyclicBarrrierEvent will be called
+            */
+           CyclicBarrier cyclicBarrier=new CyclicBarrier(3 ,new CyclicBarrrierEvent());
+           System.out.println("CountDownLatch has been created with parties=3,"
+                        + " when all 3 parties will reach common barrier point "
+                        + "CyclicBarrrierEvent will be triggered");
+ 
+           MyRunnable myRunnable1=new MyRunnable(cyclicBarrier);
+           
+           //Create and start 3 threads
+           new Thread(myRunnable1,"Thread-1").start();
+           new Thread(myRunnable1,"Thread-2").start();
+           new Thread(myRunnable1,"Thread-3").start();
+      try {
+        Thread.sleep(5000);
+      } catch (InterruptedException e) {
+        e.printStackTrace();
+      }
+
+    //Create and start 3 more threads
+      new Thread(myRunnable1,"Thread-4").start();
+      new Thread(myRunnable1,"Thread-5").start();
+      new Thread(myRunnable1,"Thread-6").start();
+           
+    }
+}
+class CyclicBarrrierEvent implements Runnable{
+
+  public void run() {
+    System.out.println("As all threads have reached common barrier point "
+            + ", CyclicBarrrierEvent has been triggered");
+  }
+
+}
+class MyRunnable implements Runnable{
+ 
+    CyclicBarrier cyclicBarrier;
+    
+    MyRunnable(CyclicBarrier cyclicBarrier){
+           this.cyclicBarrier=cyclicBarrier;
+    }
+    
+    @Override
+    public void run() {
+           
+           System.out.println(Thread.currentThread().getName() +
+                        " is waiting for all other threads to reach common barrier point");
+ 
+           try {
+                  Thread.sleep(1000);
+                  /*
+                   * when all 3 parties will call await() method (i.e. common barrier point)
+                   * CyclicBarrrierEvent will be triggered and all waiting threads will be released.
+                   */
+                  cyclicBarrier.await();
+           } catch (InterruptedException e) {
+                  e.printStackTrace();
+           } catch (BrokenBarrierException e) {
+                  e.printStackTrace();
+           }          
+           
+           System.out.println("As all threads have reached common barrier point "
+                        + Thread.currentThread().getName() +
+                        " has been released");
+    }
+    
+}
+
+```
+---
+
+---
+## PERFORMANCE_NOTES
+- [Back to Top](#Table-of-contents)
+```java
+/**
+ * LINUX
+ nohup ./bash.sh -c 'cal && ls' > output.txt // runs even after the session is exited 
+
+##########
+ // ClassNotFoundException v/s NoClassDefFoundError
+ // java.lang.ClassNotFoundException
+ Class.forName("oracle.jdbc.driver.OracleDriver");
+ }catch (ClassNotFoundException e)
+
+ // java.lang.NoClassDefFoundError
+ class A{}
+ public class 
+ {   public static void main(String[] args)
+ {   A a = new A();}
+ }
+
+ Then Remove the class A.class and run java B 
+ ##########
+ JVM arguments (https://www.jrebel.com/sites/rebel/files/pdfs/cheat-sheet-rebel-jvm-options.pdf)
+
+ 1. Standard Options (-D but not only).
+ You use -D to specify System properties but most of them don't have any prefix :-verbose, -showversion, and so for...
+ -Dblog=JRebelBlog
+ System.setProperty("blog", "JRebel"); System.getProperty("blog");
+ -verbose option during the runtime;
+
+
+ 2. Non-Standard Options (prefixed with -X)
+ To override the default bootstrap class : 
+ -Xbootclasspath:path 
+ -Xbootclasspath/a:path and -Xbootclasspath/p:path
+
+ Setting the Initial and Max size of Heap(only for old generation) -Xmssize, -Xmxsize //  -Xms1g -Xmx8g 
+
+
+ 3. Advanced Runtime Options (prefixed with -XX)
+ Runtime Behaviour
+ These options control the runtime behavior of the Java HotSpot VM.
+
+ 4. Perfromance
+ -XX:ThreadStackSize=256k
+
+ 5. Debugging.
+ -XX:ErrorFile=file.log
+ -XX:+HeapDumpOnOutOfMemoryError
+ -XX:+TraceClassLoading
+
+ 6. Garbage Collection Options 
+ These options control how garbage collection (GC) is performed by the Java HotSpot VM.
+ -XX:+UseConcMarkSweepGC
+ -XX:+UseParallelGC
+ -XX:+UseSerialGC
+ -XX:+UseG1GC
+ -XX:+UseZGC
+
+
+ OutOfMemoryError is thrown in java?
+ It is the perfect time to get your heap details (i.e. heap dump) and to spot what exactly went wrong at the time when OutOfMemoryError is thrown in java, we can use it for analyzing the garbage collection in java.
+
+ Heap dump will be generated when OutOfMemoryError is thrown by specifying -XX:+HeapDumpOnOutOfMemoryError VM option.
+ */
+
+```
+## JVM_Heap_memory
+- [Back to Top](#Table-of-contents)
+```java
+
+
+```
+
